--- a/ADO.NET Examples/WindowsFormsApplication2/App.config
+++ b/ADO.NET Examples/WindowsFormsApplication2/App.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="Default"
-      providerName="System.Data.SqlClient"
-      connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AdventureWorks2012;Integrated Security=True;MultipleActiveResultSets=True"/>
+    <add name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AdventureWorks2012;Integrated Security=True;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
+    <add name="WindowsFormsApplication2.Properties.Settings.AdventureWorks2012ConnectionString"
+      connectionString="Data Source=TROY-PC\SQLEXPRESS;Initial Catalog=AdventureWorks2012;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
