Got Wpf Example working

--- a/Entity Framework Examples/Ninja.Module2Demo/NinjaDomain.Classes/NinjaDomain.Classes.csproj
+++ b/Entity Framework Examples/Ninja.Module2Demo/NinjaDomain.Classes/NinjaDomain.Classes.csproj
@@ -40,9 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes.cs" />
+    <Compile Include="Clan.cs" />
+    <Compile Include="Ninja.cs" />
     <Compile Include="Enums\EquipmentType.cs" />
     <Compile Include="Enums\NinjaType.cs" />
+    <Compile Include="Interfaces\IModificationHistory.cs" />
+    <Compile Include="NinjaEquipment.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
