--- a/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
+++ b/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\ConsoleApplication\packages.config" />
   <repository path="..\NinjaDomain.DataModel\packages.config" />
+  <repository path="..\WpfApplication\packages.config" />
 </repositories>
