--- a/Entity Framework Examples/Ninja.Module2Demo/MVCApp/MVCAppNinjaOnly.csproj
+++ b/Entity Framework Examples/Ninja.Module2Demo/MVCApp/MVCAppNinjaOnly.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MVCApp</RootNamespace>
     <AssemblyName>MVCApp</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
@@ -181,8 +181,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Ninja.DomainClasses\NinjaDomain.Classes.csproj">
-      <Project>{7073f7fe-f900-4bdd-8b10-6bc3d88302d1}</Project>
+    <ProjectReference Include="..\NinjaDomain.Classes\NinjaDomain.Classes.csproj">
+      <Project>{eb9edbd6-d904-4799-88fa-5857b94278ca}</Project>
       <Name>NinjaDomain.Classes</Name>
     </ProjectReference>
     <ProjectReference Include="..\NinjaDomain.DataModel\NinjaDomain.DataModel.csproj">
