--- a/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
+++ b/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\ConsoleApplication\packages.config" />
+  <repository path="..\MVCApp Repository\packages.config" />
+  <repository path="..\MVCApp\packages.config" />
   <repository path="..\NinjaDomain.DataModel\packages.config" />
+  <repository path="..\WebAPI\packages.config" />
   <repository path="..\WpfApplication\packages.config" />
 </repositories>
