added async demo code

--- a/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
+++ b/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\AsyncDemoConsole\packages.config" />
   <repository path="..\ConsoleApplication\packages.config" />
   <repository path="..\MVCApp Repository\packages.config" />
   <repository path="..\MVCApp\packages.config" />
