fooling around with custom code first conventions

--- a/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
+++ b/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\AsyncDemoConsole\packages.config" />
   <repository path="..\ConsoleApplication\packages.config" />
+  <repository path="..\CustomConventionsConsole\packages.config" />
   <repository path="..\MVCApp Repository\packages.config" />
   <repository path="..\MVCApp\packages.config" />
   <repository path="..\NinjaDomain.DataModel\packages.config" />
