switched custom conventions to use the DbModelBuilder API

--- a/Entity Framework Examples/Ninja.Module2Demo/CustomConventionsConsole/CustomConventionsConsole.csproj
+++ b/Entity Framework Examples/Ninja.Module2Demo/CustomConventionsConsole/CustomConventionsConsole.csproj
@@ -79,6 +79,14 @@
     <Compile Include="Migrations\201704240515103_custom6.Designer.cs">
       <DependentUpon>201704240515103_custom6.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704241715015_custom7.cs" />
+    <Compile Include="Migrations\201704241715015_custom7.Designer.cs">
+      <DependentUpon>201704241715015_custom7.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704241720004_custom8.cs" />
+    <Compile Include="Migrations\201704241720004_custom8.Designer.cs">
+      <DependentUpon>201704241720004_custom8.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -118,6 +126,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704240515103_custom6.resx">
       <DependentUpon>201704240515103_custom6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704241715015_custom7.resx">
+      <DependentUpon>201704241715015_custom7.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704241720004_custom8.resx">
+      <DependentUpon>201704241720004_custom8.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
