Added example project for demo of Entity Provider

--- a/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
+++ b/Entity Framework Examples/Ninja.Module2Demo/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\AsyncDemoConsole\packages.config" />
   <repository path="..\ConsoleApplication\packages.config" />
   <repository path="..\CustomConventionsConsole\packages.config" />
+  <repository path="..\DataProviderConsoleApp\packages.config" />
   <repository path="..\MVCApp Repository\packages.config" />
   <repository path="..\MVCApp\packages.config" />
   <repository path="..\NinjaDomain.DataModel\packages.config" />
