--- a/Entity Framework Examples/CompiledQueryDemo/AdventureWorks.DataModel/LinqDemos/LinqDemos.csproj
+++ b/Entity Framework Examples/CompiledQueryDemo/AdventureWorks.DataModel/LinqDemos/LinqDemos.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selection.cs" />
+    <Compile Include="SequenceEqualEnumTest.cs" />
     <Compile Include="SetOps.cs" />
     <Compile Include="Sorting.cs" />
     <Compile Include="SuperHero.cs" />
