--- a/Entity Framework Examples/CompiledQueryDemo/AdventureWorks.DataModel/LINQtoEntitiesDemos/LINQtoEntitiesDemos.csproj
+++ b/Entity Framework Examples/CompiledQueryDemo/AdventureWorks.DataModel/LINQtoEntitiesDemos/LINQtoEntitiesDemos.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AsyncDemo.cs" />
     <Compile Include="BoundaryDemo.cs" />
     <Compile Include="CommandTextTest.cs" />
     <Compile Include="Program.cs" />
