--- a/XML Examples/XML Examples/XML Examples/XML Examples.csproj
+++ b/XML Examples/XML Examples/XML Examples/XML Examples.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XDocumentExample.cs" />
     <Compile Include="XMLDomExamples.cs" />
     <Compile Include="XMLStreamExamples.cs" />
   </ItemGroup>
