dicking around with sql notifications

--- a/Caching/CachingSample/CachingSample/App.config
+++ b/Caching/CachingSample/CachingSample/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <connectionStrings>
+    <add name="Default" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AdventureWorks2012;Integrated Security=True;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
