Added basic Azure Storage Demo code

--- a/.gitignore
+++ b/.gitignore
@@ -188,3 +188,4 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 Entity Framework Examples/InheritanceModels/WebApplication1/packages/*
+AzureStorageDemo/packages/*
