--- a/Transactions/ConsoleTransactions/ConsoleTransactions/App.config
+++ b/Transactions/ConsoleTransactions/ConsoleTransactions/App.config
@@ -5,7 +5,7 @@
     </startup>
   <connectionStrings>
     <add name="Default"
-         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=AdventureWorks2012;Integrated Security=True;MultipleActiveResultSets=True"
+         connectionString="Data Source=.\SQL_STANDARD;Initial Catalog=AdventureWorks2012;Integrated Security=True;MultipleActiveResultSets=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
