programmatic config vs config file

--- a/WCF Examples/PetService/PetService/App.config
+++ b/WCF Examples/PetService/PetService/App.config
@@ -5,8 +5,8 @@
     </startup>
   <system.serviceModel>
     <services>
-      <service name="PetService.CatService"
-               behaviorConfiguration="Default">
+      <service name="PetService.CatService">
+        <!--behaviorConfiguration="Default"-->
         <endpoint address="http://localhost:8081/pets/cat"
                   binding="basicHttpBinding"
                   contract="PetService.ICatService"/>
