--- a/WCF Examples/PetService/PetService/App.config
+++ b/WCF Examples/PetService/PetService/App.config
@@ -4,6 +4,15 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <system.serviceModel>
+    <!--<bindings>
+      <wsHttpBinding>
+        <binding>
+          <security mode="Message">
+            <message />
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>-->
     <services>
       <service name="PetService.CatService">
         <!--behaviorConfiguration="Default"-->
@@ -17,6 +26,7 @@
         <behavior name="Default">
           <serviceMetadata httpGetEnabled="true" 
                            httpGetUrl="http://localhost:8081/pets"/>
+          
         </behavior>
       </serviceBehaviors>
     </behaviors>
