Added Message Inspector

--- a/WCF Examples/ConsoleChatServer/ConsoleChatServer/App.config
+++ b/WCF Examples/ConsoleChatServer/ConsoleChatServer/App.config
@@ -8,6 +8,7 @@
       <serviceBehaviors>
         <behavior name="Metadata">
           <serviceMetadata httpGetEnabled="true"/>
+          <profanityInterceptor/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
@@ -17,5 +18,10 @@
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
       </service>
     </services>
+    <extensions>
+      <behaviorExtensions>
+        <add name="profanityInterceptor" type="ChatShared.ProfanityInterceptorBehaviorExtensionElement, ChatShared, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null"/>
+      </behaviorExtensions>
+    </extensions>
   </system.serviceModel>
 </configuration>
