--- a/WCF Examples/PetService/PetService/App.config
+++ b/WCF Examples/PetService/PetService/App.config
@@ -19,6 +19,9 @@
         <endpoint address="http://localhost:8081/pets/cat"
                   binding="basicHttpBinding"
                   contract="PetService.ICatService"/>
+        <endpoint address="net.tcp://localhost:8082/pets/cat"
+                  binding="netTcpBinding"
+                  contract="PetService.ICatService"/>
       </service>
     </services>
     <behaviors>
