--- a/WCF Examples/ConsoleChatServer/ConsoleChatServer/App.config
+++ b/WCF Examples/ConsoleChatServer/ConsoleChatServer/App.config
@@ -16,6 +16,11 @@
       <service behaviorConfiguration="Metadata" name="ChatShared.ChatManagerService">
         <endpoint address="duplex" binding="wsDualHttpBinding" contract="ChatShared.IChatManager" />
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8080/chatmgr"/>
+          </baseAddresses>
+        </host>
       </service>
     </services>
     <extensions>
