--- a/WCF Examples/PetService/PetService/App.config
+++ b/WCF Examples/PetService/PetService/App.config
@@ -1,35 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <system.serviceModel>
-    <!--<bindings>
-      <wsHttpBinding>
-        <binding>
-          <security mode="Message">
-            <message />
-          </security>
-        </binding>
-      </wsHttpBinding>
-    </bindings>-->
     <services>
       <service name="PetService.CatService">
-        <!--behaviorConfiguration="Default"-->
-        <endpoint address="http://localhost:8081/pets/cat"
-                  binding="basicHttpBinding"
-                  contract="PetService.ICatService"/>
-        <endpoint address="net.tcp://localhost:8082/pets/cat"
-                  binding="netTcpBinding"
-                  contract="PetService.ICatService"/>
+        <!--<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />-->
+        <endpoint address="cat" binding="basicHttpBinding"
+          name="HTTPEndpoint" contract="PetService.ICatService" />
+        <endpoint address="net.tcp://localhost:8082/pets/cat" binding="netTcpBinding"
+          name="TCPEndpoint" contract="PetService.ICatService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8081/pets" />
+          </baseAddresses>
+        </host>
       </service>
     </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="NewBehavior0" />
+      </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="Default">
-          <serviceMetadata httpGetEnabled="true" 
-                           httpGetUrl="http://localhost:8081/pets"/>
-          
+          <serviceMetadata httpGetEnabled="true" httpGetUrl="http://localhost:8081/pets/mex" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
