--- a/WCF Examples/PetService/PetServiceClient/App.config
+++ b/WCF Examples/PetService/PetServiceClient/App.config
@@ -6,10 +6,10 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_ICatService" />
+                <binding name="HTTPEndpoint" />
             </basicHttpBinding>
             <netTcpBinding>
-                <binding name="NetTcpBinding_ICatService" />
+                <binding name="TCPEndpoint" />
             </netTcpBinding>
             <wsHttpBinding>
                 <binding name="WSHttpBinding_ICatService" />
@@ -17,11 +17,11 @@
         </bindings>
         <client>
             <endpoint address="http://localhost:8081/pets/cat" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_ICatService" contract="CatServiceClient.ICatService"
-                name="BasicHttpBinding_ICatService" />
+                bindingConfiguration="HTTPEndpoint" contract="CatServiceClient.ICatService"
+                name="HTTPEndpoint" />
             <endpoint address="net.tcp://localhost:8082/pets/cat" binding="netTcpBinding"
-                bindingConfiguration="NetTcpBinding_ICatService" contract="CatServiceClient.ICatService"
-                name="NetTcpBinding_ICatService">
+                bindingConfiguration="TCPEndpoint" contract="CatServiceClient.ICatService"
+                name="TCPEndpoint">
                 <identity>
                     <userPrincipalName value="troy-PC\troy" />
                 </identity>
