Added code for programmatic config

--- a/WCF Examples/PetService/PetService/App.config
+++ b/WCF Examples/PetService/PetService/App.config
@@ -5,8 +5,8 @@
     </startup>
   <system.serviceModel>
     <services>
-      <service name="PetService.CatService">
-        <!--<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />-->
+      <service name="PetService.CatService" behaviorConfiguration="Default">
+        <remove />
         <endpoint address="cat" binding="basicHttpBinding"
           name="HTTPEndpoint" contract="PetService.ICatService" />
         <endpoint address="net.tcp://localhost:8082/pets/cat" binding="netTcpBinding"
@@ -16,6 +16,7 @@
             <add baseAddress="http://localhost:8081/pets" />
           </baseAddresses>
         </host>
+        <!--<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />-->
       </service>
     </services>
     <behaviors>
@@ -24,7 +25,7 @@
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="Default">
-          <serviceMetadata httpGetEnabled="true" httpGetUrl="http://localhost:8081/pets/mex" />
+          <!--<serviceMetadata httpGetEnabled="true"/>-->
         </behavior>
       </serviceBehaviors>
     </behaviors>
