--- a/WCF Examples/RoutingDemo/RoutingService/App.config
+++ b/WCF Examples/RoutingDemo/RoutingService/App.config
@@ -3,7 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
-  <system.serviceModel>
+  <!--<system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior>
@@ -58,5 +58,5 @@
                 contract="*"
                 name="P22455" />
     </client>
-  </system.serviceModel>
+  </system.serviceModel>-->
 </configuration>
