--- a/WCF Examples/WCF Security Demo/ConsoleService/App.config
+++ b/WCF Examples/WCF Security Demo/ConsoleService/App.config
@@ -4,10 +4,20 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="secure">
+          <security mode="Message">
+            <message clientCredentialType="Windows" />
+          </security>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
     <services>
       <service name="ServiceShared.Service">
         <endpoint address="echo"
                   binding="wsHttpBinding"
+                  bindingConfiguration="secure"
                   contract="ServiceShared.IService" />     
         <host>
           <baseAddresses>
@@ -16,5 +26,41 @@
         </host>
       </service>
     </services>
+    <diagnostics>
+      <messageLogging
+           logEntireMessage="true"
+           logMalformedMessages="false"
+           logMessagesAtServiceLevel="false"
+           logMessagesAtTransportLevel="true"
+           maxMessagesToLog="3000"
+           maxSizeOfMessageToLog="2000000"/>
+    </diagnostics>
   </system.serviceModel>
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel"
+              switchValue="Information, ActivityTracing"
+              propagateActivity="true" >
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+      <source name="System.ServiceModel.MessageLogging">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+      <source name="myUserTraceSource"
+              switchValue="Information, ActivityTracing">
+        <listeners>
+          <add name="xml"/>
+        </listeners>
+      </source>
+    </sources>
+    <sharedListeners>
+      <add name="xml"
+           type="System.Diagnostics.XmlWriterTraceListener"
+           initializeData="log.svclog" />
+    </sharedListeners>
+  </system.diagnostics>
 </configuration>
