futzing with app.config

--- a/WCF Examples/WCF Security Demo/ConsoleService/App.config
+++ b/WCF Examples/WCF Security Demo/ConsoleService/App.config
@@ -7,11 +7,18 @@
     <bindings>
       <wsHttpBinding>
         <binding name="secure">
-          <security mode="Message">
-            <message clientCredentialType="Windows" />
+          <security mode="Transport">
+            <transport clientCredentialType="Certificate" />
           </security>
         </binding>
       </wsHttpBinding>
+       <netTcpBinding>
+        <binding name="secure">
+          <security mode="Transport">
+            <transport clientCredentialType="" />
+          </security>
+        </binding>
+      </netTcpBinding>
     </bindings>
     <services>
       <service name="ServiceShared.Service">
