finished cert demo

--- a/WCF Examples/WCF Security Demo/ConsoleClient/App.config
+++ b/WCF Examples/WCF Security Demo/ConsoleClient/App.config
@@ -4,19 +4,35 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <system.serviceModel>
-        <bindings>
-            <wsHttpBinding>
-                <binding name="WSHttpBinding_IService" />
-            </wsHttpBinding>
-        </bindings>
+      <bindings>
+        <wsHttpBinding>
+          <binding name="secure">
+            <security mode="Transport">
+              <transport clientCredentialType="Certificate" />
+            </security>
+          </binding>
+        </wsHttpBinding>
+      </bindings>
         <client>
-            <endpoint address="http://localhost:10050/echo" binding="wsHttpBinding"
-                bindingConfiguration="WSHttpBinding_IService" contract="EchoService.IService"
-                name="WSHttpBinding_IService">
-                <identity>
-                    <userPrincipalName value="troy-PC\troy" />
-                </identity>
-            </endpoint>
+            <endpoint address="https://troy-PC:10050/echo" binding="wsHttpBinding"
+                bindingConfiguration="secure" contract="EchoService.IService" behaviorConfiguration="cert"
+                name="WSHttpBinding_IService" />
         </client>
+      <behaviors>
+        <endpointBehaviors>
+          <behavior name="cert">
+            <clientCredentials>
+              <clientCertificate  findValue="SignedByCA"
+                                  storeLocation="CurrentUser"
+                                  storeName="My"
+                                  x509FindType="FindBySubjectName"/>
+              
+              <serviceCertificate>
+                <authentication certificateValidationMode="ChainTrust"/>
+              </serviceCertificate>
+            </clientCredentials>
+          </behavior>
+        </endpointBehaviors>
+    </behaviors>
     </system.serviceModel>
 </configuration>
