--- a/WCF Examples/WCF Security Demo/ConsoleService/App.config
+++ b/WCF Examples/WCF Security Demo/ConsoleService/App.config
@@ -12,13 +12,6 @@
           </security>
         </binding>
       </wsHttpBinding>
-       <netTcpBinding>
-        <binding name="secure">
-          <security mode="Transport">
-            <transport clientCredentialType="" />
-          </security>
-        </binding>
-      </netTcpBinding>
     </bindings>
     <services>
       <service name="ServiceShared.Service">
@@ -28,11 +21,26 @@
                   contract="ServiceShared.IService" />     
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:10050"/>
+            <add baseAddress="https://troy-PC:10050"/>
           </baseAddresses>
-        </host>
-      </service>
+        </host>       
+      </service>      
     </services>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <serviceCredentials>
+            <clientCertificate>
+              <authentication certificateValidationMode="ChainTrust"/>
+            </clientCertificate>
+            <serviceCertificate findValue="4e5d7ad83ebb155520320c0df53a7bf7c169fb84"
+                                storeLocation="LocalMachine"
+                                storeName="My"
+                                x509FindType="FindByThumbprint"/>
+          </serviceCredentials>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
     <diagnostics>
       <messageLogging
            logEntireMessage="true"
@@ -43,6 +51,7 @@
            maxSizeOfMessageToLog="2000000"/>
     </diagnostics>
   </system.serviceModel>
+
   <system.diagnostics>
     <sources>
       <source name="System.ServiceModel"
