Got it basically working

--- a/WCF Examples/WCF Security Demo/MemberProviderService/App.config
+++ b/WCF Examples/WCF Security Demo/MemberProviderService/App.config
@@ -13,7 +13,7 @@
     <wsHttpBinding>
       <binding name="wsHttpEndpointBinding">
         <security mode="TransportWithMessageCredential">
-          <transport clientCredentialType="None" />
+          <transport clientCredentialType="Windows" />
           <message clientCredentialType="UserName" />
         </security>
       </binding>
@@ -27,12 +27,14 @@
                 name="wsHttpEndpoint" 
                 contract="ServiceShared.IService">      
       </endpoint>
+      <endpoint address="mex" 
+                binding="mexHttpsBinding" 
+                contract="IMetadataExchange" />
       <host>
         <baseAddresses>
           <add baseAddress="https://localhost:10099"/>
         </baseAddresses>
       </host>
-      <endpoint address="mex" binding="mexHttpsBinding" contract="IMetadataExchange" />
     </service>
   </services>
   <behaviors>
@@ -41,9 +43,12 @@
         <serviceMetadata httpsGetEnabled="true" />
         <serviceDebug includeExceptionDetailInFaults="true" />
         <serviceCredentials>
-          <serviceCertificate storeLocation="LocalMachine" storeName="My" x509FindType="FindBySubjectName" findValue="localhost" />
+          <serviceCertificate storeLocation="LocalMachine" 
+                              storeName="My" 
+                              x509FindType="FindByThumbprint" 
+                              findValue="685d27be857bc38ca4bacdfab634084d720b7532" />
           <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
-                                  membershipProviderName="MySqlMembershipProvider" />
+                                  membershipProviderName="InMemoryProvider" />
         </serviceCredentials>
       </behavior>
     </serviceBehaviors>
@@ -52,7 +57,7 @@
       <messageLogging
            logEntireMessage="true"
            logMalformedMessages="false"
-           logMessagesAtServiceLevel="true"
+           logMessagesAtServiceLevel="false"
            logMessagesAtTransportLevel="true"
            maxMessagesToLog="3000"
            maxSizeOfMessageToLog="2000000"/>
@@ -62,6 +67,8 @@
     <membership defaultProvider="MySqlMembershipProvider" >
       <providers>
         <clear/>
+        <add name="InMemoryProvider" type="MemberProviderService.InMemoryMembershipProvider, MemberProviderService"/>
+        
         <add name="MySqlMembershipProvider"
              connectionStringName="MyLocalSQLServer"
              applicationName="blah"
