--- a/WCF Examples/WCF Security Demo/MembershipProviderClient/App.config
+++ b/WCF Examples/WCF Security Demo/MembershipProviderClient/App.config
@@ -8,7 +8,7 @@
             <wsHttpBinding>
                 <binding name="wsHttpEndpoint">
                     <security mode="TransportWithMessageCredential">
-                        <transport clientCredentialType="None" />
+                        <transport clientCredentialType="Windows" />
                         <message clientCredentialType="UserName" />
                     </security>
                 </binding>
@@ -16,7 +16,7 @@
         </bindings>
         <client>
             <endpoint address="https://localhost:10099/WCFTestService" binding="wsHttpBinding"
-                bindingConfiguration="wsHttpEndpoint" contract="EchoService.IService"
+                bindingConfiguration="wsHttpEndpoint" contract="EchoService.IService" behaviorConfiguration="cert"
                 name="wsHttpEndpoint" />
         </client>
       <behaviors>
